# imitation

./: .gitattributes  .gitignore  README.md  pixi.toml  pyproject.toml
comparison_outputs/: CLASSIFIER_BC_policy_params_0  CLASSIFIER_BC_policy_params_10000128  CLASSIFIER_BC_policy_params_13333504  CLASSIFIER_BC_policy_params_16666880  CLASSIFIER_BC_policy_params_20000256  CLASSIFIER_BC_policy_params_23333632  CLASSIFIER_BC_policy_params_26667008  CLASSIFIER_BC_policy_params_30000384  CLASSIFIER_BC_policy_params_3333376  CLASSIFIER_BC_policy_params_33333760  CLASSIFIER_BC_policy_params_36667136  CLASSIFIER_BC_policy_params_40000512  CLASSIFIER_BC_policy_params_43333888  CLASSIFIER_BC_policy_params_46667264  CLASSIFIER_BC_policy_params_50000640  CLASSIFIER_BC_policy_params_6666752  index.json
mlruns/0/: meta.yaml
src/cs592-proj/algorithms/: base.py
src/cs592-proj/environments/: gymnax_env.py
src/cs592-proj/scripts/: train.py
src/cs592_proj/: __init__.py  final_plots.ipynb  final_plots_noise.ipynb
src/cs592_proj/algorithms/: __init__.py
src/cs592_proj/datasets/: __init__.py  custom_dataset.py
src/cs592_proj/environments/: __init__.py  gymnax_env.py  navix_env.py
src/cs592_proj/moritz_testing/: generate_ranked_trajectories.py  trex_playground.ipynb
src/cs592_proj/scripts/: comparison_plots.py  mlflow_evaluate.py  mlflow_generate_dataset.py  mlflow_inject_noise.py  mlflow_train.py  mlflow_visualize.py  train.py  train_trex copy.ipynb  train_trex.ipynb
src/imitation/: trex_playground.ipynb
src/imitation/datasets/: base.py  (+4 more)
tests/: test_playground.ipynb
(+56 files in other folders)
