[tool.poetry]
name = "cs592-proj"
version = "0.1.0"
description = ""
authors = ["Tassos Manganaris", "Nico Miguel", "Moritz Zoellner"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
